--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
             <table id="calendar" class="table custom-table align-middle table-bordered border-dark" >
                 <thead class="table-success table-bordered border-dark" >
                     <tr>
+                        <th>Day</th>
                         <th>Date</th>
-                        <th>Present</th>
+                        <th>Status</th>
                     </tr>
                 </thead>
                 <tbody class="table-group-divider">
