--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center ">
                 <li class="page-item border border-primary rounded-start">
-                    <a class="page-link" role="button" onclick="changePage(-1)">Previous</a>
+                    <a class="page-link" role="button" onclick="changePage(-1)">Prev</a>
                 </li>
                 <li class="page-item border border-primary "><span id="page-info" class="page-link"></span></li>
 
